--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
+url: grigorm.github.io/reclaim/
+title: Disinnovate
+email: grigormalo@gmail.com
+author: Grigor Malo
 description: > # "Write an awesome description for your new site here. 
-  You can edit this line in _config.yml. It will appear in your document 
-  head meta (for Google search results) and in your feed.xml site 
-  description."
+  Technology, creative coding, politics, philosophy, blogging, all sort of keywords to trick f***ing Google."
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -25,8 +23,8 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
+    url: https://twitter.com/grigormalo
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
-  - title: linkedin
-    url: 
+    url: https://github.com/GrigorM
+  - title: mail
+    url: mailto:grigormalo@gmail.com
