edits and tests

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,11 @@ permalink: pretty
 social:
   - title: twitter
     url: https://twitter.com/grigormalo
+	icon: twitter
   - title: github
     url: https://github.com/GrigorM
+	icon: github
   - title: mail
     url: mailto:grigormalo@gmail.com
+	icon: envelope
+	
