--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,10 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
+  - icon: twitter
+  title: twitter
     url: https://twitter.com/grigormalo
-icon: twitter
+
   - title: github
     url: https://github.com/GrigorM
 icon: github
