--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
+	
 # ----------------------- #
 #      Main Configs       #
-# ----------------------- #
-
-url: grigorm.github.io/reclaim/
-title: Disinnovate
+# ----------------------- #	
+--- 
+author: "Grigor Malo"
+description: "Technology, creative coding, politics, philosophy, blogging, all sort of keywords to trick f***ing Google.\"\n"
 email: grigormalo@gmail.com
-author: Grigor Malo
-description: > # "Write an awesome description for your new site here. 
-  Technology, creative coding, politics, philosophy, blogging, all sort of keywords to trick f***ing Google."
-
 # ----------------------- #
 #    Jekyll & Plugins     #
 # ----------------------- #
@@ -20,16 +17,20 @@ permalink: pretty
 # ----------------------- #
 #   3rd Party Settings    #
 # ----------------------- #
-
-social:
-  - icon: twitter
+social: 
+  - 
+    icon: twitter
     title: twitter
-    url: https://twitter.com/grigormalo
-
-  - title: github
-    url: https://github.com/GrigorM
+    url: "https://twitter.com/grigormalo"
+  - 
     icon: github
-  - title: mail
-    url: mailto:grigormalo@gmail.com
+    title: github
+    url: "https://github.com/GrigorM"
+  - 
     icon: envelope
+    title: mail
+    url: "mailto:grigormalo@gmail.com"
+title: Disinnovate
+url: grigorm.github.io/reclaim/
+	
 	
