Archive categories test

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: "Technology, creative coding, politics, philosophy, blogging, all s
 email: grigormalo@gmail.com
 markdown: kramdown
 permalink: pretty
+categories: experiments, dataviz, politics, philosophy, creative coding
 social: 
   - 
     icon: twitter
