Comments for my site

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 --- 
 author: "Grigor Malo"
-description: "Technology, creative coding, politics, philosophy, blogging, all sort of keywords to trick f***ing Google.\"\n"
+description: "Technology, creative coding, politics, philosophy, blogging, all sort of keywords to trick f***ing Google."
 email: grigormalo@gmail.com
 markdown: kramdown
 permalink: pretty
